--- a/components/openindiana/drm/Makefile
+++ b/components/openindiana/drm/Makefile
@@ -15,26 +15,38 @@
 include ../../../make-rules/shared-macros.mk
 
 COMPONENT_NAME=		drm
-COMPONENT_VERSION=	0.5.11
-COMPONENT_PROJECT_URL=	http://openindiana.org
+# Should be larger than illumos-gate version
+COMPONENT_VERSION=	0.5.11.1
+COMPONENT_PROJECT_URL=	https://hg.java.net/hg/solaris-x11~x-s12-clone
 COMPONENT_SUMMARY=	DRM Kernel Drivers
 COMPONENT_SRC=		$(COMPONENT_NAME)
 COMPONENT_ARCHIVE_HASH=	\
     sha256:3435a7a2ab1506629b2b9ee65232f66ea9b03d355006773b9abb65a316811a97
 COMPONENT_FMRI=		driver/graphics/drm
 COMPONENT_CLASSIFICATION=	Drivers/Display
-COMPONENT_LICENSE=	CDDL
-COMPONENT_LICENSE_FILE=	COPYING
+COMPONENT_LICENSE=	MIT
 
 include $(WS_TOP)/make-rules/justmake.mk
 include $(WS_TOP)/make-rules/ips.mk
 
-PATH=/usr/gnu/bin:/usr/bin
+PATH=/usr/gnu/bin:/usr/bin:/opt/onbld/bin/i386
 
-CC=/opt/gcc/4.4.4/bin/gcc
+LDFLAGS=-$(BITS)
+LD_OPTIONS=
 
-COMPONENT_BUILD_ENV += CC="$(CC)"
-COMPONENT_BUILD_ENV += CFLAGS="$(CFLAGS)"
+COMMON_ENV += CC="$(CC)"
+COMMON_ENV += CFLAGS="$(CFLAGS)"
+COMMON_ENV += LD="$(LD)"
+COMMON_ENV += EXTRA_LDFLAGS="$(LDFLAGS)"
+COMMON_ENV += MACH=$(MACH)
+COMMON_ENV += MACH64=$(MACH64)
+
+COMPONENT_BUILD_ENV += $(COMMON_ENV)
+
+COMPONENT_BUILD_ARGS =
+COMPONENT_BUILD_TARGETS = all
+
+COMPONENT_INSTALL_ENV += $(COMMON_ENV)
 
 # common targets
 download::
@@ -44,11 +56,13 @@ clobber: clean
 $(SOURCE_DIR)/.prep:
 	$(TOUCH) $@
 
-build: $(BUILD_32_and_64)
+build: $(BUILD_64)
 
-install: $(INSTALL_32_and_64)
+install: $(INSTALL_64)
 
 clean::
-	$(MAKE) -C $(SOURCE_DIR) clean
 	$(RM) $(SOURCE_DIR)/.prep
 
+
+REQUIRED_PACKAGES += developer/build/onbld
+REQUIRED_PACKAGES += system/header/header-agp
